<resources>
    <string name="app_name">Strawberry Account</string>

    <!--Labels-->
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>

    <string name="home">Home</string>
    <string name="traders_list">Traders List</string>
    <string name="sales">Sales</string>
    <string name="financial">Financial</string>
    <string name="trader_name">Trader Name</string>
    <string name="trader_info">Trader Info</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="value">Vale</string>
    <string name="profit">Profit</string>
    <string name="date">Date</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_profit">Total Profit</string>
    <string name="total_paid">Total Paid</string>
    <string name="total_owed">Total Owed</string>
    <string name="language_ar">عربي</string>
    <string name="language_en">English</string>
    <string name="language">Language</string>
    <string name="search">Search</string>
    <string name="summary_trader">*** Summary of Transactions ***</string>
    <string name="summary_all_transactions">*** Summary of All Transactions ***</string>
    <string name="empty_traders_list">Traders List is empty</string>
    <string name="empty_sales_list">Sales List is empty</string>
    <string name="empty_financial_list">Financial List is empty</string>
    <string name="no_search_result">No Search Result</string>
    <string name="about_app">This app has been developed, to help you calculate strawberry sales and keep them locally in your device,
        so take care about this app, because once you remove it or clear its data, the sales transactions data will be removed too.</string>
    <string name="dev_by">Developed by</string>
    <string name="mail">E-mail</string>
    <string name="importance_hint"><u>Very Important</u></string>

    <string name="developer_name">Islam Hani</string>
    <string name="developer_phone"><u>01061443401</u></string>
    <string name="developer_mail"><u>dev.islam97@gmail.com</u></string>

    <!--Actions Names-->
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="go">Go</string>
    <string name="retry">Retry</string>

    <!--Errors-->
    <string name="error_field_required">Field Required</string>
    <string name="error_phone_number_required">Enter Phone Number</string>
    <string name="error_username_required">Enter Username</string>
    <string name="error_trader_name_required">Enter Trader Name</string>
    <string name="error_name_length">Name length should not be less than Three letters</string>
    <string name="error_logic_number">Enter Correct Number</string>
    <string name="error_data">Data Error</string>
    <string name="error_select_date">Select Date</string>
    <string name="error_select_search_type">Select Search Type</string>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="error_network_connection">Network Connection error</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_server">Server Error</string>
    <string name="error_phone_number">Wrong Mobile Number</string>
    <string name="error_verification_code">Verification code is not correct</string>

    <string name="error_add_trader">Trader Adding Error</string>
    <string name="error_update_trader">Trader Updating Error</string>
    <string name="error_delete_trader">Trader Deleting Error</string>

    <string name="error_add">Adding Error</string>
    <string name="error_update">Updating Error</string>
    <string name="error_delete">Deleting Error</string>

    <!--Messages-->
    <string name="message_delete">Are you sure for this deletion action ?</string>
    <string name="message_choose_language">Choose Language</string>
    <string name="message_new_version">There is a new version available</string>
    <string name="message_check_last_version">Make sure you are using latest version of this app</string>

    <!--suffixes-->
    <string name="box">Box(es)</string>
    <string name="le">L.E</string>



</resources>