<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.islam.strawberryaccount.ui.fragments.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/tradersListFragment"
        android:name="com.islam.strawberryaccount.ui.fragments.listtraders.TradersListFragment"
        android:label="@string/traders_list"
        tools:layout="@layout/fragment_traders_list">
        <action
            android:id="@+id/action_tradersListFragment_to_traderFragment"
            app:destination="@id/traderFragment"
            app:enterAnim="@anim/page_slide_in_end"
            app:exitAnim="@anim/page_slide_out_start"
            app:popEnterAnim="@anim/page_slide_in_start"
            app:popExitAnim="@anim/page_slide_out_end" />
    </fragment>

    <fragment
        android:id="@+id/traderFragment"
        android:name="com.islam.strawberryaccount.ui.fragments.trader.TraderFragment"
        tools:layout="@layout/fragment_trader">

        <argument
            android:name="traderId"
            app:argType="long" />
        <action
            android:id="@+id/action_traderFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/page_slide_in_top"
            app:exitAnim="@anim/page_slide_out_bottom"
            app:popEnterAnim="@anim/page_slide_in_bottom"
            app:popExitAnim="@anim/page_slide_out_top" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.islam.strawberryaccount.ui.fragments.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.islam.strawberryaccount.ui.fragments.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.islam.strawberryaccount.ui.fragments.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <argument
            android:name="traderId"
            app:argType="long" />
    </fragment>

</navigation>