<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.search.SearchFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_search_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"

            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false" />

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/fragment_search_type_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/fragment_search_search_action"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_search_date">

            <RadioButton
                android:id="@+id/fragment_search_type_sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sales" />

            <RadioButton
                android:id="@+id/fragment_search_type_financial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/financial" />

        </RadioGroup>

        <Button
            android:id="@+id/fragment_search_search_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragment_search_type_group"
            app:layout_constraintTop_toBottomOf="@+id/fragment_search_date" />


        <TextView
          android:visibility="gone"
            android:id="@+id/fragment_search_nor_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_search_result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_action"  />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="16dp"
            android:id="@+id/fragment_search_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_search_search_action" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>